# rusty-lambda

./: Cargo.toml  README.md
src/: expr.rs  lambda.lalrpop  main.rs  prelude.txt  symbol_table.rs  term.rs
src/command/: decode.rs  encode.rs  executor.rs  mod.rs  run.rs
